# pet-akari

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: phase4-human-recognition.md
src/pet_akari/: __init__.py  akari_denser_motion.py  akari_full_motion_quality.py  akari_phase3_staging.py  akari_phase4_candidate_batch.py  akari_phase4_chatgpt_pro_faithful_pack.py  akari_phase4_chatgpt_pro_frame_pack.py  akari_phase4_gap_repair.py  akari_phase4_pro_keypose_motion.py  akari_phase4_visual_recognition.py  akari_phase4_webui_base_import.py  akari_phase4_webui_diff_pack.py  akari_phase4_webui_selection_theme.py  (+7 more)
tests/: test_akari_denser_motion.py  test_akari_full_motion_quality.py  test_akari_phase3_staging.py  test_akari_phase4_candidate_batch.py  test_akari_phase4_chatgpt_pro_faithful_pack.py  test_akari_phase4_chatgpt_pro_frame_pack.py  test_akari_phase4_gap_repair.py  test_akari_phase4_pro_keypose_motion.py  test_akari_phase4_visual_recognition.py  test_akari_phase4_webui_base_import.py  test_akari_phase4_webui_diff_pack.py  test_akari_phase4_webui_selection_theme.py  test_akari_source_set_approval.py  test_clawd_hq_theme.py
tools/: akari_denser_motion.py  akari_full_motion_quality.py  akari_phase3_staging.py  akari_phase4_gap_repair.py  akari_phase4_visual_recognition.py  akari_source_set_approval.py  test_akari_denser_motion.py  test_akari_full_motion_quality.py  test_akari_phase3_staging.py  test_akari_phase4_gap_repair.py  test_akari_phase4_visual_recognition.py  test_akari_source_set_approval.py  test_clawd_hq_theme.py
(+10 files in other folders)
