[project]
name = "pet-akari"
version = "0.1.0"
description = "Akari pet theme asset pipeline for Clawd desktop pets"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "pillow>=10.0",
    "numpy>=1.24",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tools"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
